packages/frontend/src/app/app.component.scss
@use '@angular/material' as mat;

mat-toolbar {
  position: sticky;
  top: 0;
  z-index: 1000;
  height: 56px !important;
  @include mat.toolbar-overrides((container-background-color: var(--mat-sys-primary-container),
      container-text-color: var(--mat-sys-on-surface),
    ));

  mat-icon {
    color: var(--mat-sys-primary);
  }
}

.bookmarks-icon {
  display: block
}


.title {
  cursor: pointer;
  font-family: "Dancing Script", "Times New Roman", Times, serif;
  font-size: 2rem;
  color: var(--mat-sys-primary);
  font-weight: bold;
}

.spacer {
  flex: 1 1 auto;
}

:host {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  height: 100vh;
}

.loading {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  padding: 10rem;
  gap: 3rem;
  box-sizing: border-box;
  text-align: center;
}


footer {
  flex-shrink: 0;
  padding: 1rem;
  text-align: center;
}

.page {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  min-height: calc(100vh - 56px);
  max-height: calc(100vh - 56px);
  overflow-y: scroll;
}

.container {
  flex: 1 0 auto;
  width: 60%;
  margin-left: 20%;
  margin-right: 20%;
  padding: 1rem;
  box-sizing: border-box;
}

.delete-account {
  color: red;
  cursor: pointer;
  text-decoration: underline;
}


.user {
  font-weight: bold;
}

@media (max-width: 1000px) {
  .container {
    width: 100%;
    padding: 10px;
    margin: 0;
  }

  .bookmarks-icon {
    display: none;
  }

  .title {
    font-size: 1.5rem;
  }

  .page {
    min-height: unset;
    max-height: unset;
    overflow-y: unset;
  }

  mat-toolbar {
    min-height: 56px !important;
    height: 56px !important;
  }
}

